--- a/src/pages/userList/userList.css
+++ b/src/pages/userList/userList.css
@@ -20,7 +20,7 @@
   border-radius: 10px;
   padding: 5px 10px;
   background-color: #3bb077;
-  color: #ccc;
+  color: white;
   cursor: pointer;
   margin-right: 20px;
 }
